--- a/index.html
+++ b/index.html
@@ -911,6 +911,56 @@
 
             <div style="height: 200px;"></div>
 
+
+            <!--Magazines-->
+            <h1 style="font-size: 10.033vw; text-align: center;"><i class="fas fa-book-open" style="color:#8854C8"></i>
+                Magazines
+            </h1>
+            <hr>
+            <br><br><br><br>
+
+            <div class="row">
+
+                <div class="row">
+
+                    <div class="card hover-up container" onclick="location.href='magazines.html';"
+                        style="width: 40rem; background-color: #212529; border-style: solid; border-color: #FA5CD7; padding: 0px;">
+                        <img src="assets/cozine.jpg" class="card-img-top" alt="cozine" style="max-height: 380px;">
+                        <div class="card-body">
+                            <h2 class="card-title" style="color: #FA5CD7;">Cozine</h2>
+                            <hr style="background-color:#FA5CD7; height: 0.1px; width: 70%; opacity: 100%;">
+                            <p class="card-text" style="font-size: 13px">We are on the brink of a utopian world,
+                                and technology is serving as the Wayfinder navigating us through all the
+                                perils en route.</p>
+                        </div>
+                    </div>
+
+                    <div class="row" style="height: 50px;"></div>
+
+                </div>
+                <div class="row">
+
+                    <div class="card hover-up container" onclick="location.href='magazines.html';"
+                        style="width: 40rem; background-color: #212529; border-style: solid; border-color: #E56C11; padding: 0px;">
+                        <img src="assets/technophilia.jpeg" class="card-img-top" alt="technophilia"
+                            style="max-height: 380px;">
+                        <div class="card-body">
+                            <h2 class="card-title" style="color: #E56C11;">Technophilia</h2>
+                            <hr style="background-color:#E56C11; height: 0.1px; width: 70%; opacity: 100%;">
+                            <p class="card-text" style="font-size: 13px">With hand-picked tales about how technology was
+                                our saviour this pandemic, CSI-RAIT presents to you TECHNOPHILIA- Tech In Shining
+                                Armour.</p>
+                        </div>
+                    </div>
+
+                </div>
+
+            </div>
+
+            <div style="height: 100px;">
+
+            </div>
+
             <!--Cozine-->
             <!-- <h1 style="font-size: 10.033vw; text-align: center;"><i class="fas fa-book-open" style="color:#8854C8"></i>
                 Cozine
@@ -974,7 +1024,8 @@
 
                             </div>
                             <div class="col-9">
-                                <a href="http://www.csirait.com"><img src="assets/csi-logo.png" class="img-fluid" style="height: 150px; width: 150px"></a>
+                                <a href="http://www.csirait.com"><img src="assets/csi-logo.png" class="img-fluid"
+                                        style="height: 150px; width: 150px"></a>
 
                             </div>
                             <div class="col-1">
