--- a/blogs.html
+++ b/blogs.html
@@ -38,6 +38,9 @@
     <script src="https://api.tiles.mapbox.com/mapbox-gl-js/v2.4.1/mapbox-gl.js"></script>
     <link href="https://api.tiles.mapbox.com/mapbox-gl-js/v2.4.1/mapbox-gl.css" rel="stylesheet" />
 
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"></script>
+
 </head>
 
 <body class="text-light" style="background-color: black; font-family: 'Poppins', sans-serif;">
@@ -55,15 +58,40 @@
                     style="position: fixed; bottom: 8%; right: 3%; z-index: 1; color: #8854C8; height: 70px; width: 70px;">
             </a>
 
+            <script>
+                $(document).ready(function () {
+                    $(window).scroll(function () {
+                        if ($(window).scrollTop() > 400) {
+                            $(".navbar").css({ "background-color": "black" });
+                            $(".logo").css({ "height": "40px" });
+                            $(".logo").css({ "width": "40px" });
+                            $(".logo2").css({ "height": "40px" });
+                            $(".logo2").css({ "width": "40px" });
+                        }
+                        else {
+                            $(".navbar").css({ "background-color": "" });
+                            $(".logo").css({ "height": "80px" });
+                            $(".logo").css({ "width": "80px" });
+                            $(".logo2").css({ "height": "0px" });
+                            $(".logo2").css({ "width": "0px" });
+                        }
+
+                    })
+                })
+            </script>
+
+
             <!--Main banner + nav-bar-->
             <div class="container-fluid" style="max-width: 2000px;">
 
-                <nav class="navbar navbar-expand-lg navbar-dark" style="margin: 0px;">
+                <nav class="navbar navbar-expand-lg navbar-dark fixed-top" style="margin: 0px;">
                     <div class="container-fluid">
                         <a class="navbar-brand" href="index.html">
-                            <img src="assets/decrypt-logo.png" alt="" width="100" height="100"
-                                class="d-inline-block align-text-top">
-
+                            <img src="assets/csi-logo.png" alt="CSI" style="height: 80px; width: 80px; margin: 5px;"
+                                class="d-inline-block align-text-top logo">
+                            <img src="assets/decrypt-logo.png" alt="Decrypt"
+                                style="height: 0px; width: 0px; margin: 5px;"
+                                class="d-inline-block align-text-top logo2">
                         </a>
                         <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                             data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
@@ -76,17 +104,23 @@
 
                             </ul>
                             <ul class="navbar-nav ml-auto mb-2 mb-lg-0">
-                                <li class="nav-item hover-up" style="margin-right: 50px; font-size: 20px;">
-                                    <a class="nav-link active" aria-current="page" href="index.html"
+                                <li class="nav-item" style="margin-right: 40px; font-size: 20px;">
+                                    <a class="nav-link active  hover-up" aria-current="page" href="index.html"
                                         style="font-size: 20px;">Home</a>
                                 </li>
-                                <li class="nav-item hover-up"
-                                    style="margin-right: 50px; font-size: 20px; text-underline-offset: 10px">
+                                <li class="nav-item hover-up" style="margin-right: 40px; font-size: 20px;">
                                     <a class="nav-link active" aria-current="page" href="members.html">Members</a>
                                 </li>
                                 <li class="nav-item hover-up glow"
-                                    style="margin-right: 100px; font-size: 20px; text-underline-offset: 10px">
+                                    style="margin-right: 40px; font-size: 20px;  text-underline-offset: 10px">
                                     <a class="nav-link active" aria-current="page" href="blogs.html"><u>Blogs</u></a>
+                                </li>
+                                <li class="nav-item hover-up" style="margin-right: 40px; font-size: 20px;">
+                                    <a class="nav-link active" aria-current="page" href="magazines.html">Magazines</a>
+                                </li>
+                                <li class="nav-item hover-up" style="margin-right: 20px; font-size: 20px;">
+                                    <a class="nav-link active" aria-current="page"
+                                        href="https://docs.google.com/forms/d/e/1FAIpQLSdTBRxhK4-hCE8y0r7wjfj1NHIwSuvVpZbYgClhUBeKDv_UDw/viewform?usp=sf_link">Write</a>
                                 </li>
 
                             </ul>
@@ -96,6 +130,9 @@
                 </nav>
 
                 <div class="container" style="text-align: center; margin-top: 5%;">
+                    <div style="height: 170px;">
+
+                    </div>
                     <i class="fas fa-exclamation-triangle" style="color: #8854C8; font-size: 25vh;"></i>
                     <br><br><br><br>
                     <h1 class="glow" style="font-family: 'Orbitron', sans-serif; font-size: 5vh;">Under<br>Development
@@ -108,23 +145,23 @@
 
             <!--Footer-->
             <div class="container-fluid">
-                <h1 style="font-size: 5vw; text-align: center;"><i class="fas fa-phone-alt" style="color:#8854C8"></i>
+                <h1 style="font-size: 10.033vw; text-align: center;"><i class="fas fa-phone-alt"
+                        style="color:#8854C8"></i>
                     Contact
                     us</h1>
                 <div style="height: 100px;"></div>
                 <div class="row">
                     <div class="col-3">
                         <div class="row">
-                            <div class="col-5">
-                                <a href="https://kaustubh0204.github.io/Decrypt/"><img src="assets/decrypt-logo.png"
-                                        class="img-fluid"></a>
-                            </div>
+                            <div class="col-2">
 
-                            <div class="col-5">
-                                <a href="http://www.csirait.com"><img src="assets/csi-logo.png" class="img-fluid"></a>
+                            </div>
+                            <div class="col-8">
+                                <a href="http://www.csirait.com"><img src="assets/csi-logo.png" class="img-fluid"
+                                        style="height: 200px; width: 200px;"></a>
                             </div>
                             <div class="col-2">
-                                <div style="height: 230px; border-left: 2px solid #8854C8;">
+                                <div style="height: 250px; border-left: 2px solid #8854C8;">
 
                                 </div>
                             </div>
@@ -156,7 +193,7 @@
 
                         <div class="row">
                             <div class="col-2">
-                                <div style="height: 230px; border-left: 2px solid #8854C8; margin-left: 2.67558vw;">
+                                <div style="height: 250px; border-left: 2px solid #8854C8; margin-left: 2.67558vw;">
 
                                 </div>
                             </div>
@@ -181,7 +218,9 @@
                                 <a style="text-decoration: none; font-size: 20px;"
                                     href="https://www.facebook.com/csirait.official/" target="_blank"
                                     class="socialmedia"><i class="fab fa-facebook"></i> &nbspFacebook</a><br><br>
-
+                                <a style="text-decoration: none; font-size: 20px;"
+                                    href="https://www.facebook.com/csirait.official/" target="_blank"
+                                    class="socialmedia"><i class="fab fa-discord"></i> &nbspDiscord</a><br><br>
                             </div>
 
                         </div>
@@ -196,6 +235,7 @@
                         Copyright 2021</p>
                 </div>
 
+                <!--Mapbox marker & popup styling-->
                 <style>
                     .marker {
                         background-image: url('assets/csi-logo.png');
@@ -251,21 +291,45 @@
 
         <template class="ad__mobile" style="overflow: hidden;">
 
-             <!--Whatsapp button-->
-             <a target="_blank" href="https://wa.me/+917066695395?text=I%20am%20interested%20"><img
-                src="assets/whatsapp_icon.png" class="hover-up" alt="whatsapp"
-                style="position: fixed; bottom: 5%; right: 3%; z-index: 1; color: #8854C8; height: 50px; width: 50px;">
-        </a>
+            <!--Whatsapp button-->
+            <a target="_blank" href="https://wa.me/+917066695395?text=I%20am%20interested%20"><img
+                    src="assets/whatsapp_icon.png" class="hover-up" alt="whatsapp"
+                    style="position: fixed; bottom: 5%; right: 3%; z-index: 1; color: #8854C8; height: 50px; width: 50px;">
+            </a>
+
+            <script>
+                $(document).ready(function () {
+                    $(window).scroll(function () {
+                        if ($(window).scrollTop() > 200) {
+                            $(".navbar").css({ "background-color": "black" });
+                            $(".logo").css({ "height": "40px" });
+                            $(".logo").css({ "width": "40px" });
+                            $(".logo2").css({ "height": "40px" });
+                            $(".logo2").css({ "width": "40px" });
+                        }
+                        else {
+                            $(".navbar").css({ "background-color": "" });
+                            $(".logo").css({ "height": "80px" });
+                            $(".logo").css({ "width": "80px" });
+                            $(".logo2").css({ "height": "0px" });
+                            $(".logo2").css({ "width": "0px" });
+                        }
+
+                    })
+                })
+            </script>
 
             <!--Main banner + nav-bar-->
             <div class="container-fluid" style="max-width: 2000px;">
 
-                <nav class="navbar navbar-expand-lg navbar-dark" style="margin: 0px;">
+                <nav class="navbar navbar-expand-lg navbar-dark fixed-top" style="margin: 0px;">
                     <div class="container-fluid">
                         <a class="navbar-brand" href="index.html">
-                            <img src="assets/decrypt-logo.png" alt="Decrypt" style="height: 70px; width: 70px"
-                                class="d-inline-block align-text-top">
-
+                            <img src="assets/csi-logo.png" alt="CSI" style="height: 70px; width: 70px; margin: 5px;"
+                                class="d-inline-block align-text-top logo">
+                            <img src="assets/decrypt-logo.png" alt="Decrypt"
+                                style="height: 0px; width: 0px; margin: 5px;"
+                                class="d-inline-block align-text-top logo2">
                         </a>
                         <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                             data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
@@ -278,16 +342,24 @@
 
                             </ul>
                             <ul class="navbar-nav ml-auto mb-2 mb-lg-0">
-                                <li class="nav-item hover-up" style="margin-right: 50px; font-size: 20px;">
-                                    <a class="nav-link active" aria-current="page" href="index.html"
+                                <li class="nav-item" style="margin-right: 40px; font-size: 20px;">
+                                    <a class="nav-link active hover-up" aria-current="page" href="index.html"
                                         style="font-size: 20px;">Home</a>
                                 </li>
-                                <li class="nav-item hover-up" style="margin-right: 50px; font-size: 20px;">
-                                    <a class="nav-link active" aria-current="page" href="members.html">Members</a>
+                                <li class="nav-item hover-up  "
+                                    style="margin-right: 40px; font-size: 20px;">
+                                    <a class="nav-link active" aria-current="page"
+                                        href="members.html">Members</a>
                                 </li>
-                                <li class="nav-item hover-up glow"
-                                    style="margin-right: 100px; font-size: 20px;  text-underline-offset: 10px">
+                                <li class="nav-item hover-up glow" style="margin-right: 40px; font-size: 20px; text-underline-offset: 10px">
                                     <a class="nav-link active" aria-current="page" href="blogs.html"><u>Blogs</u></a>
+                                </li>
+                                <li class="nav-item hover-up" style="margin-right: 40px; font-size: 20px;">
+                                    <a class="nav-link active" aria-current="page" href="magazines.html">Magazines</a>
+                                </li>
+                                <li class="nav-item hover-up" style="margin-right: 20px; font-size: 20px;">
+                                    <a class="nav-link active" aria-current="page"
+                                        href="https://docs.google.com/forms/d/e/1FAIpQLSdTBRxhK4-hCE8y0r7wjfj1NHIwSuvVpZbYgClhUBeKDv_UDw/viewform?usp=sf_link">Write</a>
                                 </li>
 
                             </ul>
@@ -308,7 +380,8 @@
 
             <!--Footer-->
             <div class="container-fluid">
-                <h1 style="font-size: 5vw; text-align: center;"><i class="fas fa-phone-alt" style="color:#8854C8"></i>
+                <h1 style="font-size: 10.033vw; text-align: center;"><i class="fas fa-phone-alt"
+                        style="color:#8854C8"></i>
                     Contact
                     us</h1>
                 <div style="height: 100px;"></div>
@@ -343,19 +416,28 @@
                 <div class="row">
                     <div class="col-5">
                         <div class="row">
-                            <div class="col-6">
+                            <!-- <div class="col-6">
                                 <a href="https://kaustubh0204.github.io/Decrypt/"><img src="assets/decrypt-logo.png"
                                         class="img-fluid"></a>
-                            </div>
+                            </div> -->
+                            <div class="col-2">
 
-                            <div class="col-6">
-                                <a href="http://www.csirait.com"><img src="assets/csi-logo.png" class="img-fluid"></a>
                             </div>
+                            <div class="col-9">
+                                <a href="http://www.csirait.com"><img src="assets/csi-logo.png" class="img-fluid"
+                                        style="height: 150px; width: 150px"></a>
+
+                            </div>
+                            <div class="col-1">
+
+                            </div>
+                            <!-- <div class="col-6"> -->
+                            <!-- </div> -->
 
                         </div>
                     </div>
                     <div class="col-2">
-                        <div style="height: 150px; border-left: 2px solid #8854C8; margin-left: 25px;">
+                        <div style="height: 180px; border-left: 2px solid #8854C8; margin-left: 25px;">
 
                         </div>
                     </div>
@@ -380,6 +462,9 @@
                             <a style="text-decoration: none; font-size: 20px;"
                                 href="https://www.facebook.com/csirait.official/" target="_blank" class="socialmedia"><i
                                     class="fab fa-facebook"></i> &nbspFacebook</a><br><br>
+                            <a style="text-decoration: none; font-size: 20px;"
+                                href="https://www.facebook.com/csirait.official/" target="_blank" class="socialmedia"><i
+                                    class="fab fa-discord"></i> &nbspDiscord</a><br><br>
 
 
 
