--- a/index.html
+++ b/index.html
@@ -924,8 +924,8 @@
                 <div class="row">
 
                     <div class="card hover-up container" onclick="location.href='magazines.html';"
-                        style="max-width: 400px; background-color: #212529; border-style: solid; border-color: #FA5CD7; padding: 0px;">
-                        <img src="assets/cozine.jpg" class="card-img-top" alt="cozine" style="max-height: 380px;">
+                        style="max-width: 500px; background-color: #212529; border-style: solid; border-color: #FA5CD7; padding: 0px;">
+                        <img src="assets/cozine.jpg" class="card-img-top" alt="cozine" style="max-height: 380px; max-width: 500px;">
                         <div class="card-body">
                             <h2 class="card-title" style="color: #FA5CD7;">Cozine</h2>
                             <hr style="background-color:#FA5CD7; height: 0.1px; width: 70%; opacity: 100%;">
@@ -941,9 +941,9 @@
                 <div class="row">
 
                     <div class="card hover-up container" onclick="location.href='magazines.html';"
-                        style="max-width: 400px; background-color: #212529; border-style: solid; border-color: #E56C11; padding: 0px;">
+                        style="max-width: 500px; background-color: #212529; border-style: solid; border-color: #E56C11; padding: 0px;">
                         <img src="assets/technophilia.jpeg" class="card-img-top" alt="technophilia"
-                            style="max-height: 380px;">
+                            style="max-height: 380px; max-width: 500px;">
                         <div class="card-body">
                             <h2 class="card-title" style="color: #E56C11;">Technophilia</h2>
                             <hr style="background-color:#E56C11; height: 0.1px; width: 70%; opacity: 100%;">
