--- a/index.html
+++ b/index.html
@@ -919,9 +919,9 @@
             <hr>
             <br><br><br><br>
 
-            <div class="row">
+            <div class="row justify-content-center">
 
-                <div class="row">
+                <div class="row justify-content-center">
 
                     <div class="card hover-up container" onclick="location.href='magazines.html';"
                         style="max-width: 500px; background-color: #212529; border-style: solid; border-color: #FA5CD7; padding: 0px;">
@@ -938,7 +938,7 @@
                     <div class="row" style="height: 50px;"></div>
 
                 </div>
-                <div class="row">
+                <div class="row justify-content-center">
 
                     <div class="card hover-up container" onclick="location.href='magazines.html';"
                         style="max-width: 500px; background-color: #212529; border-style: solid; border-color: #E56C11; padding: 0px;">
