--- a/index.html
+++ b/index.html
@@ -921,7 +921,7 @@
 
             <div class="row justify-content-center">
 
-                <div class="row justify-content-center" style="padding: 5px;">
+                <div class="row justify-content-center">
 
                     <div class="card hover-up container" onclick="location.href='magazines.html';"
                         style="max-width: 500px; background-color: #212529; border-style: solid; border-color: #FA5CD7; padding: 0px;">
@@ -938,7 +938,7 @@
                     <div class="row" style="height: 50px;"></div>
 
                 </div>
-                <div class="row justify-content-center" style="padding: 5px;">
+                <div class="row justify-content-center">
 
                     <div class="card hover-up container" onclick="location.href='magazines.html';"
                         style="max-width: 500px; background-color: #212529; border-style: solid; border-color: #E56C11; padding: 0px;">
@@ -1025,7 +1025,7 @@
                             </div>
                             <div class="col-9">
                                 <a href="http://www.csirait.com"><img src="assets/csi-logo.png" class="img-fluid"
-                                        style="height: 150px; width: 150px"></a>
+                                        style="height: 100px; width: 100px"></a>
 
                             </div>
                             <div class="col-1">
