--- a/members.html
+++ b/members.html
@@ -1627,6 +1627,9 @@
                 </nav>
 
                 <div class="container" style="text-align: center; margin-top: 5%;">
+                    <div style="height: 100px;">
+
+                    </div>
                     <i class="fas fa-exclamation-triangle" style="color: #8854C8; font-size: 25vh;"></i>
                     <br><br><br><br>
                     <h1 class="glow" style="font-family: 'Orbitron', sans-serif; font-size: 5vh;">Under<br>Development
@@ -1683,7 +1686,7 @@
                             </div>
                             <div class="col-9">
                                 <a href="http://www.csirait.com"><img src="assets/csi-logo.png" class="img-fluid"
-                                        style="height: 150px; width: 150px"></a>
+                                    style="height: 100px; width: 100px"></a>
 
                             </div>
                             <div class="col-1">
