--- a/blogs.html
+++ b/blogs.html
@@ -371,6 +371,8 @@
                 <div class="container" style="text-align: center; margin-top: 5%;">
                     <i class="fas fa-exclamation-triangle" style="color: #8854C8; font-size: 25vh;"></i>
                     <br><br><br><br>
+                    <div style="height: 100px;">
+
                     <h1 class="glow" style="font-family: 'Orbitron', sans-serif; font-size: 5vh;">Under<br>Development
                     </h1>
                 </div>
@@ -425,7 +427,7 @@
                             </div>
                             <div class="col-9">
                                 <a href="http://www.csirait.com"><img src="assets/csi-logo.png" class="img-fluid"
-                                        style="height: 150px; width: 150px"></a>
+                                    style="height: 100px; width: 100px"></a>
 
                             </div>
                             <div class="col-1">
