--- a/blogs.html
+++ b/blogs.html
@@ -369,10 +369,10 @@
                 </nav>
 
                 <div class="container" style="text-align: center; margin-top: 5%;">
+
+                    <div style="height: 100px;"></div>
                     <i class="fas fa-exclamation-triangle" style="color: #8854C8; font-size: 25vh;"></i>
                     <br><br><br><br>
-                    <div style="height: 100px;">
-
                     <h1 class="glow" style="font-family: 'Orbitron', sans-serif; font-size: 5vh;">Under<br>Development
                     </h1>
                 </div>
