Magazines page added.

--- a/blogs.html
+++ b/blogs.html
@@ -346,12 +346,11 @@
                                     <a class="nav-link active hover-up" aria-current="page" href="index.html"
                                         style="font-size: 20px;">Home</a>
                                 </li>
-                                <li class="nav-item hover-up  "
-                                    style="margin-right: 40px; font-size: 20px;">
-                                    <a class="nav-link active" aria-current="page"
-                                        href="members.html">Members</a>
+                                <li class="nav-item hover-up  " style="margin-right: 40px; font-size: 20px;">
+                                    <a class="nav-link active" aria-current="page" href="members.html">Members</a>
                                 </li>
-                                <li class="nav-item hover-up glow" style="margin-right: 40px; font-size: 20px; text-underline-offset: 10px">
+                                <li class="nav-item hover-up glow"
+                                    style="margin-right: 40px; font-size: 20px; text-underline-offset: 10px">
                                     <a class="nav-link active" aria-current="page" href="blogs.html"><u>Blogs</u></a>
                                 </li>
                                 <li class="nav-item hover-up" style="margin-right: 40px; font-size: 20px;">
@@ -427,7 +426,7 @@
                             </div>
                             <div class="col-9">
                                 <a href="http://www.csirait.com"><img src="assets/csi-logo.png" class="img-fluid"
-                                    style="height: 100px; width: 100px"></a>
+                                        style="height: 100px; width: 100px"></a>
 
                             </div>
                             <div class="col-1">
