--- a/index.html
+++ b/index.html
@@ -398,7 +398,7 @@
 
                 <div class="col-5">
 
-                    <div class="card hover-up container"
+                    <div class="card hover-up container" onclick="location.href='magazines.html#cozine';"
                         style="width: 40rem; background-color: #212529; border-style: solid; border-color: #FA5CD7; padding: 0px;">
                         <img src="assets/cozine.jpg" class="card-img-top" alt="cozine" style="max-height: 380px;">
                         <div class="card-body">
@@ -414,7 +414,7 @@
 
                 <div class="col-5">
 
-                    <div class="card hover-up container"
+                    <div class="card hover-up container" onclick="location.href='magazines.html#technophilia';"
                         style="width: 40rem; background-color: #212529; border-style: solid; border-color: #E56C11; padding: 0px;">
                         <img src="assets/technophilia.jpeg" class="card-img-top" alt="technophilia"
                             style="max-height: 380px;">
@@ -430,14 +430,7 @@
                 </div>
             </div>
 
-            <!-- <div class="container-fluid" style="padding: 0px;">
 
-                <iframe class="container-fluid" style="margin: 0px; padding: 0px;"
-                    src="https://online.anyflip.com/sught/vcns/index.html" sandboxscrolling="no" frameborder="0"
-                    width="700" height="700" allowfullscreen="true" webkitallowfullscreen="true"
-                    mozallowfullscreen="true" sandbox="allow-scripts"></iframe>
-
-            </div> -->
 
             <div style="height: 300px;"></div>
 
@@ -925,7 +918,8 @@
 
                     <div class="card hover-up container" onclick="location.href='magazines.html';"
                         style="max-width: 500px; background-color: #212529; border-style: solid; border-color: #FA5CD7; padding: 0px;">
-                        <img src="assets/cozine.jpg" class="card-img-top" alt="cozine" style="max-height: 380px; max-width: 500px;">
+                        <img src="assets/cozine.jpg" class="card-img-top" alt="cozine"
+                            style="max-height: 380px; max-width: 500px;">
                         <div class="card-body">
                             <h2 class="card-title" style="color: #FA5CD7;">Cozine</h2>
                             <hr style="background-color:#FA5CD7; height: 0.1px; width: 70%; opacity: 100%;">
@@ -961,22 +955,7 @@
 
             </div>
 
-            <!--Cozine-->
-            <!-- <h1 style="font-size: 10.033vw; text-align: center;"><i class="fas fa-book-open" style="color:#8854C8"></i>
-                Cozine
-                2021</h1>
-            <hr>
-            <br>
-            <div class="container-fluid" style="padding: 0px;">
 
-                <iframe class="container-fluid" style="margin: 0px; padding: 0px;"
-                    src="https://online.anyflip.com/sught/vcns/index.html" sandboxscrolling="no" frameborder="0"
-                    width="400" height="600" allowfullscreen="true" webkitallowfullscreen="true"
-                    mozallowfullscreen="true" sandbox="allow-scripts"></iframe>
-
-            </div>
-
-            <div style="height: 300px;"></div> -->
 
             <!--Footer-->
             <div class="container-fluid">
