--- a/magazines.html
+++ b/magazines.html
@@ -386,16 +386,16 @@
                                     <a class="nav-link active hover-up" aria-current="page" href="index.html"
                                         style="font-size: 20px;">Home</a>
                                 </li>
-                                <li class="nav-item hover-up glow "
-                                    style="margin-right: 40px; font-size: 20px;  text-underline-offset: 10px">
+                                <li class="nav-item hover-up "
+                                    style="margin-right: 40px; font-size: 20px;">
                                     <a class="nav-link active" aria-current="page"
-                                        href="members.html"><u>Members</u></a>
+                                        href="members.html">Members</a>
                                 </li>
                                 <li class="nav-item hover-up" style="margin-right: 40px; font-size: 20px;">
                                     <a class="nav-link active" aria-current="page" href="blogs.html">Blogs</a>
                                 </li>
-                                <li class="nav-item hover-up" style="margin-right: 40px; font-size: 20px;">
-                                    <a class="nav-link active" aria-current="page" href="magazines.html">Magazines</a>
+                                <li class="nav-item hover-up glow " style="margin-right: 40px; font-size: 20px; text-underline-offset: 10px;">
+                                    <a class="nav-link active" aria-current="page" href="magazines.html"><u>Magazines</u></a>
                                 </li>
                                 <li class="nav-item hover-up" style="margin-right: 20px; font-size: 20px;">
                                     <a class="nav-link active" aria-current="page"
