--- a/index.html
+++ b/index.html
@@ -107,20 +107,20 @@
 
                             </ul>
                             <ul class="navbar-nav ml-auto mb-2 mb-lg-0">
-                                <li class="nav-item" style="margin-right: 40px; font-size: 20px;">
+                                <li class="nav-item" style="margin-right: 15px; font-size: 20px;">
                                     <a class="nav-link active glow hover-up" aria-current="page" href="index.html"
-                                        style="font-size: 20px; text-underline-offset: 10px"><u>Home</u></a>
+                                        style="font-size: 18px; text-underline-offset: 10px; font-weight: 300;"><u>Home</u></a>
                                 </li>
-                                <li class="nav-item hover-up" style="margin-right: 40px; font-size: 20px;">
+                                <li class="nav-item hover-up" style="margin-right: 15px; font-size: 18px; font-weight: 300;">
                                     <a class="nav-link active" aria-current="page" href="members.html">Members</a>
                                 </li>
-                                <li class="nav-item hover-up" style="margin-right: 40px; font-size: 20px;">
+                                <li class="nav-item hover-up" style="margin-right: 15px; font-size: 18px; font-weight: 300;">
                                     <a class="nav-link active" aria-current="page" href="blogs.html">Blogs</a>
                                 </li>
-                                <li class="nav-item hover-up" style="margin-right: 40px; font-size: 20px;">
+                                <li class="nav-item hover-up" style="margin-right: 15px; font-size: 18px; font-weight: 300;">
                                     <a class="nav-link active" aria-current="page" href="magazines.html">Magazines</a>
                                 </li>
-                                <li class="nav-item hover-up" style="margin-right: 20px; font-size: 20px;">
+                                <li class="nav-item hover-up" style="margin-right: 15px; font-size: 18px; font-weight: 300;">
                                     <a class="nav-link active" aria-current="page"
                                         href="https://docs.google.com/forms/d/e/1FAIpQLSdTBRxhK4-hCE8y0r7wjfj1NHIwSuvVpZbYgClhUBeKDv_UDw/viewform?usp=sf_link">Write</a>
                                 </li>
@@ -146,7 +146,7 @@
 
                 <div class="row">
                     <div class="col-6" style="margin-top: 10%;">
-                        <h1 style="font-size: 8.033vw; text-align: center;">What is<br>decrypt?</h1>
+                        <h1 style="font-size: 8.033vw; text-align: center;">What Is<br>Decrypt?</h1>
                     </div>
                     <div class="col-6" style="margin-top: 10%;">
                         <p style="font-size: 18px; text-align: justify;">
