--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <meta property="og:url" content="https://kaustubh0204.github.io/Decrypt/">
 
     <title>Decrypt | Home</title>
-    <link rel="icon" href="assets/decrypt-logo.png" type="image/x-icon">
+    <link rel="icon" href="assets/decrypt-logo-2.png" type="image/x-icon">
 
     <!--Bootstrap-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -92,7 +92,7 @@
                         <a class="navbar-brand" href="index.html">
                             <img src="assets/csi-logo.png" alt="CSI" style="height: 80px; width: 80px; margin: 5px;"
                                 class="d-inline-block align-text-top logo">
-                            <img src="assets/decrypt-logo.png" alt="Decrypt"
+                            <img src="assets/decrypt-logo-2.png" alt="Decrypt"
                                 style="height: 0px; width: 0px; margin: 5px;"
                                 class="d-inline-block align-text-top logo2">
                         </a>
@@ -133,10 +133,12 @@
 
                 <div class="container" style="text-align: center;">
                     <div style="height: 270px;"></div>
-                    <h1 class="glow" style="font-family: 'Orbitron', sans-serif; font-size: 6.688vw;">Decrypt</h1>
+                    <h1 class="glow" style="font-family: azonix; font-size: 6.688vw;">Decrypt</h1>
                     <div style="height: 70px;"></div>
-                    <a href="#hot4"><i class="fas fa-arrow-circle-down hover-down"
-                            style="color: #8854C8; font-size: 7vw;"></i></a>
+
+                  <a href="#hot4"><img class="hover-down"  src="assets/arrow-01.png" style="height: 7vw; width: 7vw;"></a>
+                    <!-- <a href="#hot4"><i class="fas fa-arrow-circle-down hover-down"
+                            style="color: #8854C8; font-size: 7vw;"></i></a> -->
                     <div style="height: 200px;"></div>
                 </div>
             </div>
@@ -619,7 +621,7 @@
                         <a class="navbar-brand" href="index.html">
                             <img src="assets/csi-logo.png" alt="CSI" style="height: 70px; width: 70px; margin: 5px;"
                                 class="d-inline-block align-text-top logo">
-                            <img src="assets/decrypt-logo.png" alt="Decrypt"
+                            <img src="assets/decrypt-logo-2.png" alt="Decrypt"
                                 style="height: 0px; width: 0px; margin: 5px;"
                                 class="d-inline-block align-text-top logo2">
                         </a>
@@ -996,7 +998,7 @@
                     <div class="col-5">
                         <div class="row">
                             <!-- <div class="col-6">
-                                <a href="https://kaustubh0204.github.io/Decrypt/"><img src="assets/decrypt-logo.png"
+                                <a href="https://kaustubh0204.github.io/Decrypt/"><img src="assets/decrypt-logo-2.png"
                                         class="img-fluid"></a>
                             </div> -->
                             <div class="col-2">
