--- a/blogs.html
+++ b/blogs.html
@@ -11,7 +11,7 @@
     <meta property="og:url" content="https://kaustubh0204.github.io/Decrypt/">
 
     <title>Decrypt | Blogs</title>
-    <link rel="icon" href="assets/decrypt-logo.png" type="image/x-icon">
+    <link rel="icon" href="assets/decrypt-logo-2.png" type="image/x-icon">
 
     <!--Bootstrap-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -89,7 +89,7 @@
                         <a class="navbar-brand" href="index.html">
                             <img src="assets/csi-logo.png" alt="CSI" style="height: 80px; width: 80px; margin: 5px;"
                                 class="d-inline-block align-text-top logo">
-                            <img src="assets/decrypt-logo.png" alt="Decrypt"
+                            <img src="assets/decrypt-logo-2.png" alt="Decrypt"
                                 style="height: 0px; width: 0px; margin: 5px;"
                                 class="d-inline-block align-text-top logo2">
                         </a>
@@ -327,7 +327,7 @@
                         <a class="navbar-brand" href="index.html">
                             <img src="assets/csi-logo.png" alt="CSI" style="height: 70px; width: 70px; margin: 5px;"
                                 class="d-inline-block align-text-top logo">
-                            <img src="assets/decrypt-logo.png" alt="Decrypt"
+                            <img src="assets/decrypt-logo-2.png" alt="Decrypt"
                                 style="height: 0px; width: 0px; margin: 5px;"
                                 class="d-inline-block align-text-top logo2">
                         </a>
@@ -418,7 +418,7 @@
                     <div class="col-5">
                         <div class="row">
                             <!-- <div class="col-6">
-                                <a href="https://kaustubh0204.github.io/Decrypt/"><img src="assets/decrypt-logo.png"
+                                <a href="https://kaustubh0204.github.io/Decrypt/"><img src="assets/decrypt-logo-2.png"
                                         class="img-fluid"></a>
                             </div> -->
                             <div class="col-2">
